tests/valid/trait/method_call_explicit_ufcs_local_annotated_pure_receiver_float.facet
trait Runner {
  fn run(self: Self) -> unrestricted f64;
}

impl Runner for unrestricted f64 {
  fn run(self: Self) -> unrestricted f64 {
    self
  }
}

fn main() -> unrestricted f64 {
  let x: unrestricted f64 = 1.5;
  (<unrestricted f64 as Runner>::run x)
}
