tests/invalid/trait/assoc_projection_fn_signature_mismatch.facet
trait Iterator {
  type Item;
}

impl Iterator for unrestricted isize {
  type Item = isize;
}

fn id_bool(x: unrestricted bool) -> unrestricted bool {
  x
}

fn main() -> unrestricted isize {
  let f: unrestricted fn(unrestricted <unrestricted isize as Iterator>::Item) -> unrestricted <unrestricted isize as Iterator>::Item = id_bool in
  (f 1)
}
